--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "firebase": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "latest",
+    "next": "^15.2.5",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
