--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.4",
     "embla-carousel-react": "latest",
     "firebase": "latest",
     "input-otp": "latest",
